anna (1.14) UNRELEASED; urgency=low

  * 

 -- Christian Perrier <bubulle@debian.org>  Wed,  6 Jul 2005 23:28:22 +0200

anna (1.13) unstable; urgency=low

  * Updated translations:
    - Indonesian (id.po) by Arief S Fitrianto
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov
    - Vietnamese (vi.po) by Clytie Siddall

 -- Christian Perrier <bubulle@debian.org>  Wed,  6 Jul 2005 23:20:48 +0200

anna (1.12) unstable; urgency=low

  * Revert change in 1.11, since it causes extra priority kernel modules
    to not be installed, and seems to pull in other stuff that was not pulled
    in before. Reopens: #219888

 -- Joey Hess <joeyh@debian.org>  Tue, 28 Jun 2005 21:16:10 -0400

anna (1.11) unstable; urgency=low

  [ Joey Hess ]
  * Build with -fomit-frame-pointer, saves a few bytes.
  * Add a patch, loosely based on a long-neglected patch from Jeremie Koenig,
    to include udebs that will be installed by default in the selection list
    and allow the user to de-select them, providing more control in lowmem
    installs and other situations. Closes: #219888

  * Updated translations: 
    - Arabic (ar.po) by Ossama M. Khayat
    - Bulgarian (bg.po) by Ognyan Kulev
    - Catalan (ca.po) by Guillem Jover
    - Czech (cs.po) by Miroslav Kure
    - Danish (da.po) by Claus Hindsgaul
    - German (de.po) by Dennis Stampfer
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Spanish (es.po) by Javier Fernández-Sanguino Peña
    - Basque (eu.po) by Piarres Beobide
    - French (fr.po) by Christian Perrier
    - Italian (it.po) by Giuseppe Sacco
    - Japanese (ja.po) by Kenshi Muto
    - Portuguese (pt.po) by Miguel Figueiredo
    - Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
    - Romanian (ro.po) by Eddy Petrişor
    - Russian (ru.po) by Yuri Kozlov
    - Slovak (sk.po) by Peter Mann
    - Albanian (sq.po) by Elian Myftiu
    - Turkish (tr.po) by Recai Oktaş
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov