@@ -1,6 +1,8 @@
 anna (1.14) UNRELEASED; urgency=low
 
-  * 
+  [ Colin Watson ]
+  * Make 'anna-install <foo>-modules' (for any name provided by a kernel
+    module) work when doing immediate installation as well as when queueing.
 
  -- Christian Perrier <bubulle@debian.org>  Wed,  6 Jul 2005 23:28:22 +0200
 
